# Protocol-ITSM

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  app.py  create_test_data.ps1  docker-compose.dev.yml  docker-compose.local-prod.yml  docker-compose.prod.yml  docker-compose.yml  requirements.txt  ruff.toml
.claude/: launch.json  settings.json
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260601_0001_initial_schema.py  20260602_0002_add_users.py  20260603_0003_add_meetings.py  20260604_0004_auth_contacts_executor_user.py  20260604_0005_user_fullname.py  20260605_0006_must_change_password.py  20260605_0007_audit_log.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py  redis_client.py  security.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  audit_log.py  base.py  department.py  executor.py  item.py  item_executor.py  meeting.py  meeting_participant.py  status.py  user.py
backend/app/repositories/: __init__.py  base.py  department_repository.py  executor_repository.py  item_repository.py  meeting_repository.py  status_repository.py  user_repository.py
backend/app/routers/: __init__.py  auth.py  departments.py  executors.py  export.py  items.py  meetings.py  statuses.py  users.py  workflows.py
backend/app/schemas/: __init__.py  auth.py  common.py  department.py  executor.py  item.py  meeting.py  status.py  user.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  csv_service.py  department_service.py  executor_service.py  item_service.py  meeting_service.py  status_service.py
backend/app/utils/: constants.py  identifiers.py  time.py
backend/app/workflows/: __init__.py  client.py  hello_flow.py
backend/tests/: conftest.py  test_auth.py  test_departments_api.py  test_executors_api.py  test_export.py  test_items_api.py  test_meetings_api.py  test_permissions.py  test_statuses_api.py  test_users_api.py  test_workflows.py
deploy/: nginx.conf  nginx.local.conf
docs/: ARCHITECTURE.md  AUDIT_v2.6.9.md  AUDIT_v2.7.0.md  Audit_Result_TZ.md  MIGRATION_GUIDE.md
frontend/: .gitignore  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts  vitest.config.ts
frontend/src/: api.ts  app.css  app.html  bulk.ts  confirm.ts  filters.ts  loader.ts  main.ts  modals.ts  refs.ts  render.ts  state.ts  theme.ts  toast.ts  types.ts  utils.ts
scripts/: migrate_data.py  seed.py  seed_demo.py  seed_top10.py
static/: index.html
static/assets/: index-66-L7s84.js  index-ACkh-Cc8.css  index-BlQZ06-0.css  index-CF7I7uM_.js  index-Cc3X966b.css  index-DVHxox1e.js
(+73 files in other folders)
