[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol-backend"
version = "2.7.0"
description = "Протокол совещания — бэкенд v2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.18",
    "openpyxl>=3.1.5",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "aiosqlite>=0.20.0",
    "pyright>=1.1.390",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 120
target-version = "py312"

# Единый источник правды для Ruff. CI запускает `ruff check app/` из каталога backend/,
# поэтому конфигурация линта должна жить здесь (корневой ruff.toml Ruff в этом случае
# не видит). Раньше правила были в корневом ruff.toml и в CI не применялись.
[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # длину строк контролирует line-length

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # импорты без использования в тестах допустимы

# Статическая проверка типов. Прикладной код (app/) держим зелёным в режиме standard.
# Тесты не проверяем: фикстуры httpx/ASGI дают много шума, не относящегося к проду.
[tool.pyright]
include = ["app"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
